@@ -122,7 +122,7 @@
 		if (item && [item state] == DOWNLOAD_COMPLETED)
 		{
 			if ([[NSWorkspace sharedWorkspace] openFile:[item filename]] == NO)
-				runOKAlertSheet(@"Vienna cannot open the file title", @"Vienna cannot open the file body", [[item filename] lastPathComponent]);
+				runOKAlertSheet(NSLocalizedString(@"Vienna cannot open the file title", nil), NSLocalizedString(@"Vienna cannot open the file body", nil), [[item filename] lastPathComponent]);
 		}
 	}
 }
@@ -140,7 +140,7 @@
 		if (item && [item state] == DOWNLOAD_COMPLETED)
 		{
 			if ([[NSWorkspace sharedWorkspace] selectFile:[item filename] inFileViewerRootedAtPath:@""] == NO)
-				runOKAlertSheet(@"Vienna cannot show the file title", @"Vienna cannot show the file body", [[item filename] lastPathComponent]);
+				runOKAlertSheet(NSLocalizedString(@"Vienna cannot show the file title", nil), NSLocalizedString(@"Vienna cannot show the file body", nil), [[item filename] lastPathComponent]);
 		}
 	}
 }
