@@ -4,6 +4,7 @@
 </head>
 <body>
 <ul>
+<li>SECURITY: fix potential vulnerability when deleting a maliciously crafted subscription. (Reported by Julien Bachmann)</li>
 <li>Fix for bug 2724576: If network is down, URL tab information is lost. (Patch from Benedict Cohen).</li>
 <li>Fix for bug 2381168: Keychain issues with https.</li>
 <li>When switching back and forth from a tab, maintain the selected user interface item in the tab.</li>
