@@ -11,6 +11,7 @@ Thanks!
 
 2.3.2.2303
 ----------
+- SECURITY: fix potential vulnerability when deleting a maliciously crafted subscription. (Reported by Julien Bachmann)
 - Fix for bug 2724576: If network is down, URL tab information is lost. (Patch from Benedict Cohen).
 - Fix for bug 2381168: Keychain issues with https.
 - When switching back and forth from a tab, maintain the selected user interface item in the tab.
